Add basic components

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<mat-card>
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Email">
+    </mat-form-field>
+  
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Password">
+    </mat-form-field>
+
+      <button mat-raised-button>Login</button>
+      <button mat-raised-button>Cancel</button>
+  </form>
+</mat-card>
