Add Agm and Ngx-gallery

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,4 +1,8 @@
 footer {
-    background: #efefef;
-    padding: 15px;
-  }
+  background: #efefef;
+  padding: 15px;
+}
+
+.content {
+  margin: 10px;
+}
