--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,19 +5,15 @@
       <mat-list-item [routerLink]="['/bar']"> Bar</mat-list-item>
     </mat-list>
   </mat-sidenav>
-
   <div class="page-wrap">
     <header role="banner">
       <mat-toolbar color="primary">
-        <button
-          type="button"
-          mat-icon-button
-          (click)="sidenav.open()"
-          title="Open sidenav">
+        <button type="button" mat-icon-button (click)="sidenav.open()" title="Open sidenav">
           <mat-icon>menu</mat-icon>
         </button>
         Your Toolbar
       </mat-toolbar>
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
     </header>
     <main class="content">
       <router-outlet></router-outlet>
@@ -26,4 +22,5 @@
       Food Ordering Application
     </footer>
   </div>
+
 </mat-sidenav-container>
