--- a/client/src/app/food-card/food-card.component.html
+++ b/client/src/app/food-card/food-card.component.html
@@ -1,3 +1,14 @@
-<p>
-  food-card works!
-</p>
+<mat-card class="example-card">
+  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <a mat-button color="primary" class="food-card-button">Primary</a>
+  </mat-card-content>
+  <mat-card-actions>
+    <div class="button-row">
+      <button mat-button class="food-card-button">LIKE</button>
+      <button mat-button class="food-card-button">
+        <mat-icon aria-label="add to shopping cart">add_shopping_cart</mat-icon>
+      </button>
+    </div>
+  </mat-card-actions>
+</mat-card>
