--- a/client/src/app/restaurant/restaurant.component.html
+++ b/client/src/app/restaurant/restaurant.component.html
@@ -1,4 +1,7 @@
-<ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+<div>
+  <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+</div>
+
 
 <mat-chip-list>
   <mat-chip>All</mat-chip>
