--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -3,6 +3,39 @@ footer {
   padding: 15px;
 }
 
+.mat-toolbar.mat-primary {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 9;
+}
+
 .content {
-  margin: 10px;
+  overflow: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 92%;
+}
+
+.sidenav {
+  padding: 10px;
+  min-width: 200px;
+  background-color: rgba(228, 228, 228, 0.35);
+}
+
+.toolbar-icon {
+  padding: 0 14px;
+}
+
+.menu-icon {
+  margin-left: -15px;
+}
+
+.toolbar-spacer {
+  flex: 1 1 auto;
+}
+
+.filler-content {
+  padding: 60px;
 }
