--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,26 +1,27 @@
-<mat-sidenav-container class="all-wrap" fullscreen>
-  <mat-sidenav #sidenav>
+<div>
+  <mat-toolbar color="primary" layout="row" style="position: fixed;">
+    <button mat-icon-button class="menu-icon">
+      <mat-icon (click)="sidenav.toggle()" class="mat-24" aria-label="Menu">menu</mat-icon>
+    </button>
+    <span>
+      <h2>Food Ordering</h2>
+    </span>
+    <span class="toolbar-spacer"></span>
+    <mat-icon class="toolbar-icon">settings</mat-icon>
+  </mat-toolbar>
+</div>
+
+<mat-sidenav-container fullscreen style="margin-top: 75px !important;">
+  <mat-sidenav #sidenav mode="side" class="sidenav">
     <mat-list>
-      <mat-list-item [routerLink]="['/']"> Foo</mat-list-item>
-      <mat-list-item [routerLink]="['/bar']"> Bar</mat-list-item>
+      <mat-list-item [routerLink]="['/orders']"> Orders</mat-list-item>
+      <mat-list-item [routerLink]="['/restaurant']"> Restaurants</mat-list-item>
     </mat-list>
   </mat-sidenav>
-  <div class="page-wrap">
-    <header role="banner">
-      <mat-toolbar color="primary">
-        <button type="button" mat-icon-button (click)="sidenav.open()" title="Open sidenav">
-          <mat-icon>menu</mat-icon>
-        </button>
-        Your Toolbar
-      </mat-toolbar>
-      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
-    </header>
-    <main class="content">
-      <router-outlet></router-outlet>
-    </main>
-    <footer>
-      Food Ordering Application
-    </footer>
+  <div class="content">
+    <router-outlet class="z-depth"></router-outlet>
   </div>
-
+  <footer>
+    Food Ordering Application
+  </footer>
 </mat-sidenav-container>
