--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,43 +1,21 @@
-/* .mat-toolbar.mat-primary {
-  
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 9;
-}
-
-.content {
-  overflow: auto;
-  padding-left: 10px;
-  padding-right: 10px;
-  height: 92%;
-}
-
-.sidenav {
-  padding: 10px;
-  min-width: 200px;
-  background-color: rgba(228, 228, 228, 0.35);
-}
-
-.toolbar-icon {
-  padding: 0 14px;
-}
-
-.menu-icon {
-  margin-left: -15px;
-}
-
-.toolbar-spacer {
-  flex: 1 1 auto;
-}
-
-.filler-content {
-  padding: 60px;
-} */
-
 .inner-sidenav-content {
   overflow: auto;
   padding-left: 10px;
   padding-right: 10px;
-  height: 80%;
+  height: 90%;
+}
+
+#style-4::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+#style-4::-webkit-scrollbar {
+  width: 5px;
+  background-color: #f5f5f5;
+}
+
+#style-4::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border: 1px solid #555555;
 }
