--- a/client/src/app/orders-list/orders-list.component.html
+++ b/client/src/app/orders-list/orders-list.component.html
@@ -1,5 +1,5 @@
 <div class="example-container mat-elevation-z8">
-  <mat-table #table [dataSource]="dataSource">
+  <mat-table #table [dataSource]="dataSource" class="scrollbar" id="style-4">
 
     <ng-container matColumnDef="ordnumber">
       <mat-header-cell *matHeaderCellDef> Order Number </mat-header-cell>
