--- a/client/src/app/food-card/food-card.component.html
+++ b/client/src/app/food-card/food-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
   <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
   <mat-card-content>
-    <a mat-button color="primary" class="food-card-button">Primary</a>
+    <a mat-button color="primary" class="food-card-button">{{title}}</a>
   </mat-card-content>
   <mat-card-actions>
     <div class="button-row">
