add dialogbox to inventory and change component

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div style="position:fixed;top:0;left:0;right:0;bottom:0;">
+  
   <mat-sidenav-container fullscreen>
     <mat-sidenav mode="over" #sidenav style="min-width:220px;">
       <mat-list>
         <mat-list-item [routerLink]="['/orders']"> Orders</mat-list-item>
         <mat-list-item [routerLink]="['/restaurant']"> Restaurants</mat-list-item>
+        <mat-list-item [routerLink]="['/inventory']"> Inventory</mat-list-item>
       </mat-list>
     </mat-sidenav>
     <mat-toolbar color="primary" style="min-height:64px;">
