--- a/client/src/app/components/inventory/inventory.component.html
+++ b/client/src/app/components/inventory/inventory.component.html
@@ -6,7 +6,7 @@
     <mat-card class="example-card">
       <img mat-card-image src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Good_Food_Display_-_NCI_Visuals_Online.jpg/1200px-Good_Food_Display_-_NCI_Visuals_Online.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
-        <a mat-button color="primary" class="inventory-card-button">Food Items</a>
+        <a mat-button color="primary" class="inventory-card-button" (click)="getfoods()">Food Items</a>
       </mat-card-content>
       <mat-card-actions>
         <div class="button-row">
@@ -20,7 +20,7 @@
     <mat-card class="example-card">
       <img mat-card-image src="http://2.bp.blogspot.com/-BWEWT5d-sZM/Tb0qAnRxIEI/AAAAAAAAAWU/kzBHkdFQ6O0/s1600/800bikes.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
-        <a mat-button color="primary" class="inventory-card-button">Vehicles</a>
+        <a mat-button color="primary" class="inventory-card-button" (click)="getVehicles()">Vehicles</a>
       </mat-card-content>
       <mat-card-actions>
         <div class="button-row">
