--- a/client/src/app/components/inventory/vehicle-dialog/vehicle-dialog.component.html
+++ b/client/src/app/components/inventory/vehicle-dialog/vehicle-dialog.component.html
@@ -2,14 +2,20 @@
 <mat-dialog-content>
     <div >
         <mat-form-field>
-          <input matInput placeholder="Brand">
+          <input matInput placeholder="Brand" [(ngModel)]="brand" name="brand">
         </mat-form-field>
           <mat-form-field>
-            <input matInput placeholder="Model">
+            <input matInput placeholder="Model" [(ngModel)]="model" name="model">
           </mat-form-field>
           <mat-form-field>
-              <input matInput placeholder="License Number">
+              <input matInput placeholder="License Number" [(ngModel)]="icenseno" name="icenseno">
           </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Quantity" [(ngModel)]="quantity" name="quantity">
+        </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Date" [(ngModel)]="dob" name="dob">
+        </mat-form-field>
       </div>
 </mat-dialog-content>
 <mat-dialog-actions>
