Add registration link

--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -22,7 +22,11 @@
       </table>
     </form>
     <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-
+    <span>
+      <p>Dont have an account?
+        <a mat-button (click)="Register()" >Register</a>
+      </p>
+    </span>
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button (click)="login()" color="primary">Login</button>
