--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -44,11 +44,11 @@
     <tr>
     <td>
       <span>
-        <button mat-button [matMenuTriggerFor]="menu">Access Level</button>
+        <!-- <button mat-button [matMenuTriggerFor]="menu">Access Level</button>
         <mat-menu #menu="matMenu">
           <button mat-menu-item (click)="Signup('admin')" >Admin</button>
           <button mat-menu-item (click)="Signup('user')">User</button>
-        </mat-menu>
+        </mat-menu> -->
       </span>
     </td>
     </tr>
