load food to table

--- a/client/src/app/components/inventory/food-table/food-table.component.html
+++ b/client/src/app/components/inventory/food-table/food-table.component.html
@@ -41,6 +41,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header>Description</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.description}}</mat-cell>
     </ng-container>
+    
 
     <!-- actions -->
     <ng-container matColumnDef="actions">
@@ -66,12 +67,12 @@
   </mat-table>
 
 
-  <div class="no-results" [style.display]="dataSource.renderedData.length == 0 ? '' : 'none'">
+  <div class="no-results" [style.display]="dataSource.length == 0 ? '' : 'none'">
     No results
   </div>
 
   <mat-paginator #paginator
-                 [length]="dataSource.filteredData.length"
+                 [length]="dataSource.length"
                  [pageIndex]="0"
                  [pageSize]="10"
                  [pageSizeOptions]="[5, 10, 25, 100]">
