--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,9 +3,10 @@
   <mat-sidenav-container fullscreen>
     <mat-sidenav mode="over" #sidenav style="min-width:220px;">
       <mat-list>
-        <mat-list-item [routerLink]="['/orders']"> Orders</mat-list-item>
-        <mat-list-item [routerLink]="['/restaurant']"> Restaurants</mat-list-item>
+        <mat-list-item [routerLink]="['/orders']"> Orders history</mat-list-item>
+        <mat-list-item [routerLink]="['/restaurant']"> Order online</mat-list-item>
         <mat-list-item [routerLink]="['/inventory']"> Inventory</mat-list-item>
+        <mat-list-item [routerLink]="['/userProfile']"> Edit user</mat-list-item>
       </mat-list>
     </mat-sidenav>
     <mat-toolbar color="primary" style="min-height:64px;">
@@ -14,7 +15,7 @@
           <i class="material-icons toolbar-link-icon" style="color:white;">menu</i>
         </button>
       </span>
-      <span>Food Ordering Application</span>
+      <span>Food Magic</span>
     </mat-toolbar>
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
     <div class="inner-sidenav-content scrollbar" id="style-4">
