--- a/client/src/app/components/user-profile/user-profile.component.html
+++ b/client/src/app/components/user-profile/user-profile.component.html
@@ -1,3 +1,68 @@
-<p>
-  user-profile works!
-</p>
+<mat-card>
+    <form class="example-form">
+      <table class="example-full-width" cellspacing="0">
+        <tr>
+          <td>
+            <mat-form-field class="example-full-width">
+            <input matInput placeholder="First name" name="fname" [(ngModel)]="fname">
+            </mat-form-field>
+          </td>
+          <td>
+              <mat-form-field class="example-full-width">
+              <input matInput placeholder="Last Name" [(ngModel)]="lname" name="lname">
+            </mat-form-field>
+          </td>
+        </tr>
+      <tr>
+          <td>
+              <mat-form-field class="example-full-width">
+              <input matInput placeholder="Phone" [(ngModel)]="phone" name="phone">
+              </mat-form-field>
+          </td>
+        </tr>
+        <tr>
+          <td>
+              <mat-form-field class="example-full-width">
+                  <input matInput placeholder="Username" [(ngModel)]="uname" name="uname">
+                  </mat-form-field>
+          </td>
+        </tr>
+    </table>
+    
+      <p>
+        <mat-form-field class="example-full-width">
+          <textarea matInput placeholder="Address" [(ngModel)]="address" name="address"></textarea>
+        </mat-form-field>
+      </p>
+    
+      <table class="example-full-width" cellspacing="0">
+        <tr>
+        <td>
+          <span>
+            <!-- <button mat-button [matMenuTriggerFor]="menu">Access Level</button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="Signup('admin')" >Admin</button>
+              <button mat-menu-item (click)="Signup('user')">User</button>
+            </mat-menu> -->
+          </span>
+        </td>
+        </tr>
+        <tr>
+        <td>
+          <mat-form-field class="example-full-width">
+          <input matInput type="password" placeholder="Password" [(ngModel)]="password" name="password">
+            <mat-hint align="end">Min 8 length</mat-hint>
+          </mat-form-field>
+        </td>
+      </tr>
+      <tr>
+      <td>
+          <button mat-raised-button color="primary" (click)="Signup()" >Save</button>
+        </td>
+        <td>
+            <button mat-raised-button  color="primary">Cancel</button>
+        </td>
+      </tr>
+    </table>
+    </form>
+    </mat-card>
