--- a/client/src/app/components/food-card/food-card.component.html
+++ b/client/src/app/components/food-card/food-card.component.html
@@ -1,6 +1,14 @@
 <mat-card class="example-card">
   
   <mat-card-actions>
+      <mat-card-content>
+        <div style="text-align: center;">
+            {{title}}
+        </div>
+        <div style="text-align: center;">
+            <font color="red">{{price}}</font>
+        </div>
+        </mat-card-content>
     <div class="button-row">
       <button mat-button class="food-card-button">LIKE</button>
       <button mat-button class="food-card-button">
