--- a/client/src/app/components/inventory/food-table/delete/delete.component.html
+++ b/client/src/app/components/inventory/food-table/delete/delete.component.html
@@ -3,11 +3,11 @@
   <div mat-dialog-content>
     Id: {{data.id}}
     <p></p>
-    Title: {{data.title}}
+    Meal Name: {{data.title}}
     <p></p>
     State: {{data.state}}
     <p></p>
-    Url: {{data.url}}
+    Price: {{data.url}}
     <p></p>
   </div>
 
