--- a/client/src/app/components/inventory/inventory.component.css
+++ b/client/src/app/components/inventory/inventory.component.css
@@ -1,20 +1,33 @@
 .example-card {
-    max-width: 400px;
-    margin: 10px;
-  }
-  
-  .example-header-image {
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Good_Food_Display_-_NCI_Visuals_Online.jpg/1200px-Good_Food_Display_-_NCI_Visuals_Online.jpg");
-    background-size: cover;
-  }
-  
-  .inventory-card-button {
-    width: 100%;
-  }
-  
-  .button-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-  
+  max-width: 400px;
+  margin: 10px;
+}
+
+.example-header-image {
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Good_Food_Display_-_NCI_Visuals_Online.jpg/1200px-Good_Food_Display_-_NCI_Visuals_Online.jpg");
+  background-size: cover;
+}
+
+.inventory-card-button {
+  width: 100%;
+}
+
+.button-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.container {
+  display: flex;
+}
+
+.box1 {
+  flex: 1;
+  order: 1;
+}
+
+.box2 {
+  flex: 1;
+  order: 2;
+}
