--- a/client/src/app/components/user-profile/user-profile.component.css
+++ b/client/src/app/components/user-profile/user-profile.component.css
@@ -1,9 +1,23 @@
 .example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+.container {
+  display: flex;
+}
+
+.box1 {
+  flex: 3;
+  order: 1;
+}
+
+.box2 {
+  flex: 1;
+  order: 2;
+}
