remove and arrange components

--- a/client/src/app/components/cart/cart.component.html
+++ b/client/src/app/components/cart/cart.component.html
@@ -1,5 +1,6 @@
 <mat-card class="container">
-  <div class="box6">CART</div>
+  <div class="box6">
+    <i class="fas fa-cart-plus icon fa-lg"></i>My Cart</div>
   <div class="box7">
     <button mat-button color="primary" (click)="shop()">Continue Shopping</button>
   </div>
