--- a/client/src/app/components/delivery/delivery.component.html
+++ b/client/src/app/components/delivery/delivery.component.html
@@ -1,3 +1,6 @@
-<p>
-  delivery works!
-</p>
+<mat-card class="container">
+  <div class="box1">
+    <i class="fas fa-truck icon"></i>Deliveries</div>
+  <div class="box2">
+  </div>
+</mat-card>
