--- a/client/src/app/components/inventory/inventory.component.html
+++ b/client/src/app/components/inventory/inventory.component.html
@@ -1,7 +1,7 @@
 <mat-card class="container">
-  <div class="box1">Inventory</div>
+  <div class="box1">
+    <i class="fas fa-boxes icon fa-lg"></i>Inventory</div>
   <div class="box2">
-    <button mat-button color="primary" (click)="shop()">Continue Shopping</button>
   </div>
 </mat-card>
 
@@ -20,7 +20,23 @@
       </mat-card-actions>
     </mat-card>
   </div>
+
   <div class="box2">
+    <mat-card class="example-card">
+      <img mat-card-image src="https://www.franchiseindia.com/uploads/content/ri/art/specialty-food-ingredients-to-re-6570459497.jpg"
+        alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <a mat-button color="primary" class="inventory-card-button" (click)="getVehicles()">Ingredients</a>
+      </mat-card-content>
+      <mat-card-actions>
+        <div class="button-row">
+          <button mat-button class="food-card-button" (click)="openVehicleDialog()">Add Ingredients</button>
+        </div>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+  <div class="box3">
     <mat-card class="example-card">
       <img mat-card-image src="http://2.bp.blogspot.com/-BWEWT5d-sZM/Tb0qAnRxIEI/AAAAAAAAAWU/kzBHkdFQ6O0/s1600/800bikes.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
