--- a/client/src/app/components/orders/orders.component.html
+++ b/client/src/app/components/orders/orders.component.html
@@ -1,5 +1,6 @@
 <mat-card class="container">
-  <div class="box1">My Orders</div>
+  <div class="box1">
+    <i class="fas fa-clipboard-list icon fa-lg"></i>My Orders</div>
   <div class="box2">
     <button mat-button color="primary" (click)="shop()">Continue Shopping</button>
   </div>
