--- a/client/src/app/components/user-profile/user-profile.component.html
+++ b/client/src/app/components/user-profile/user-profile.component.html
@@ -1,5 +1,6 @@
 <mat-card class="container">
-  <div class="box1">My Profile </div>
+  <div class="box1">
+    <i class="fas fa-user-circle icon fa-lg"></i>My Profile </div>
   <div class="box2">
     <button mat-button color="primary" (click)="shop()">Continue Shopping</button>
   </div>
