add advanced food search component

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,6 +5,8 @@
       <mat-list>
         <mat-list-item [routerLink]="['/restaurant']" (click)="sidenav.close()">
           <i class="fas fa-shopping-bag icon"></i>Shop</mat-list-item>
+        <mat-list-item [routerLink]="['/meals']" (click)="sidenav.close()">
+          <i class="fas fa-utensils icon"></i>Find You're Meal</mat-list-item>
         <mat-list-item [routerLink]="['/inventory']" (click)="sidenav.close()">
           <i class="fas fa-boxes icon"></i> Inventory</mat-list-item>
         <mat-list-item [routerLink]="['/userProfile']" (click)="sidenav.close()">
