--- a/client/src/app/components/restaurant/restaurant.component.css
+++ b/client/src/app/components/restaurant/restaurant.component.css
@@ -36,6 +36,16 @@
   flex-direction: row;
 }
 
+.box5 {
+  flex: 4;
+  order: 1;
+}
+
+.box6 {
+  flex: 1;
+  order: 2;
+}
+
 .icon {
   padding: 5px;
 }
