add order,deliver,employee,promo services

--- a/client/src/app/components/restaurant/food-advanced/food-advanced.component.html
+++ b/client/src/app/components/restaurant/food-advanced/food-advanced.component.html
@@ -30,3 +30,7 @@
     </div>
   </div>
 </mat-card>
+<div *ngFor="let meal of meals">
+  <app-food-card [price]="meal.price" [title]="meal.name">
+  </app-food-card>
+</div>
